# family-inventory

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.rabbitmq.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 20260127_130438_initial_schema.py  20260202_144304_add_inapp_notification_channel.py  20260203_012636_add_in_app_notification.py  20260205_161144_fix_notification_enums_and_constraints.py  20260206_003903_fix_notification_channel_enum_inapp_in_.py  20260206_013925_remove_unique_event_id_in.py  20260206_161247_add_context_to_notificationdelivery.py  20260208_231649_fix_notification_outbox_defaults_and_.py  20260301_120000_add_notification_subscriptions.py  20260301_121000_add_subscription_target.py  2b441d703831_add_inventory_items_table.py  e2ac077a8ac2_add_unique_inventory_name_per_home.py
app/: main.py
app/apis/errors/: errors.py  open_api_errors.py
app/apis/homes/: exceptions.py  models.py  queries.py  repository.py  router.py  schema.py  service.py
app/apis/homeuser/: exceptions.py  models.py  repository.py  router.py  schema.py  service.py
app/apis/inventory/: events.py  exceptions.py  expiry_job.py  expiry_service.py  models.py  repository.py  router.py  schema.py  service.py  types.py
app/core/: exception_handlers.py  logging.py  monitoring.py
app/iam/: __init__.py  auth_service.py  dependencies.py  exceptions.py  password_service.py  permissions.py  roles.py  schema.py  token_service.py  types.py  websocket_auth.py
app/jobs/: inventory_expiry_job.py
app/schemas_base/: base.py  protocols.py
app/scripts/: test_broker.py
family_cli/: create_admin.py  main.py  reset_db.py  run.py  user.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
frontend/public/: login.html
frontend/src/: App.tsx  main.tsx
tests/: conftest.py
tests/home/: test_create_home.py
tests/iam/: test_token_service.py
tests/unit/: test_migrations.py
(+67 files in other folders)
