[tool.poetry]
name = "family-inventory"
version = "0.1.0"
description = "Family inventory management API"
authors = ["Nil <nilo@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.120.1"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
aioredis = "^2.0.1"
celery = "^5.5.3"
pydantic = { version = "^2.12.4", extras = ["email"] }
python-jose = "^3.5.0"
passlib = "^1.7.4"
pydantic-settings = "^2.12.0"
greenlet = "^3.2.4"
bcrypt = "3.2.2"
typer = "0.20.0"
redis = "^7.1.0"
ruff = "^0.14.7"
httpx = "^0.28.1"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
aio-pika = "^9.5.8"
colorlog = "^6.10.1"
structlog = "^25.5.0"
prometheus-client = "^0.24.1"
python-multipart = "^0.0.20"
aiosmtpd = "^1.4.6"
mypy = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.3.0"
isort = "^6.0.0"
pytest-asyncio = "^1.3"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
